--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,10 @@
 buildscript {
 
     repositories {
-        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta3'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.google.gms:google-services:3.1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -17,8 +16,11 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
+        //Google
+        maven {
+            url "https://maven.google.com"
+        }
         //MDLive
         maven {
             url 'https://breakthroughbehavioralinc.bintray.com/maven/'
@@ -30,7 +32,7 @@ allprojects {
     }
     project.ext {
         // MDLive SDK library AAR
-        MDL_android_sdk = "com.mdlive.mdla:android-sdk:4.0.4"
+        MDL_android_sdk = "com.mdlive.mdla:android-sdk:4.0.0-SNAPSHOT@aar"
     }
 }
 
