Add AS 2.3.3 support.

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ allprojects {
     }
     project.ext {
         // MDLive SDK library AAR
-        MDL_android_sdk = "com.mdlive.mdla:android-sdk:4.0.0-SNAPSHOT@aar"
+        MDL_android_sdk = "com.mdlive.mdla:android-sdk:4.0.5@aar"
     }
 }
 
